--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/flex": "^1.0",
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
+        "symfony/intl": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
