--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "friendsofsymfony/rest-bundle": "^2.4",
         "jms/serializer-bundle": "^2.4",
         "knplabs/knp-paginator-bundle": "^2.8",
+        "phpoffice/phpspreadsheet": "^1.4",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/dotenv": "^4.1",
