--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,6 +2,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    excel_directory: '%kernel.project_dir%/public/uploads/excels/'
 
 services:
     # default configuration for services in *this* file
@@ -30,3 +31,8 @@ services:
     App\DataFixtures\:
         resource: '../src/DataFixtures'
         tags: [doctrine.fixture.orm]
+
+
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%excel_directory%'
