--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "jms/serializer-bundle": "^2.4",
         "knplabs/knp-paginator-bundle": "^2.8",
         "phpoffice/phpspreadsheet": "^1.5",
+        "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.1",
