--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.17.1",
+    "@symfony/webpack-encore": "^0.24.0",
     "bootstrap": "^4.1.3",
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.3.1",
@@ -10,6 +10,7 @@
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "js-xlsx": "^0.8.22"
   }
 }
