--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -3,8 +3,6 @@ fos_rest:
     param_fetcher_listener:  true
     allowed_methods_listener:  true
     routing_loader: true
-    view:
-        view_response_listener:  false
     exception:
         enabled: false
         # codes:
@@ -18,14 +16,20 @@ fos_rest:
    #     rules:
    #         - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
 
-#     view:
-#         mime_types:
-#             json: ['application/json', 'application/json;version=1.0', 'application/json;version=1.1']
-#         view_response_listener: 'force'
-#         formats:
-#             json: true
-#         templating_formats:
-#             html: false
+    view:
+        mime_types:
+            json: ['application/json', 'application/json;version=1.0', 'application/json;version=1.1']
+        view_response_listener: 'force'
+        formats:
+            json: true
+        templating_formats:
+            html: false
+
+    format_listener:
+        rules:
+            - { path: ^/api, priorities: [ json ], fallback_format: json, prefer_extension: true }
+            - { path: ^/ajax, priorities: [ json ], fallback_format: json, prefer_extension: true }
+            - { path: ^/, stop: true }
 # services:
 #     view_handler: my.view_handler
 #     my.view_handler:
