--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,10 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.4",
+        "gargron/fileupload": "^1.5",
         "jms/serializer-bundle": "^2.4",
         "knplabs/knp-paginator-bundle": "^2.8",
+        "oneup/flysystem-bundle": "^3.0",
         "phpoffice/phpspreadsheet": "^1.5",
         "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.1",
@@ -15,6 +17,7 @@
         "symfony/console": "^4.1",
         "symfony/dotenv": "^4.1",
         "symfony/expression-language": "^4.1",
+        "symfony/filesystem": "^4.1",
         "symfony/flex": "^1.1",
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
