--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "blueimp-file-upload": "^9.28.0",
+    "core-js": "^3.0.1",
+    "jquery-file-upload": "^4.0.11",
+    "jquery-ui": "^1.12.1",
     "js-xlsx": "^0.8.22"
+  },
+  "providedServices": {
+    "autocomplete.provider": {
+      "versions": {
+        "4.0.0": "provide"
+      }
+    }
   }
 }
