--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.24.0",
+    "@symfony/webpack-encore": "^0.27.0",
     "bootstrap": "^4.1.3",
     "bootstrap-sass": "^3.3.7",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.7.2",
-    "popper.js": "^1.14.7",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
     "sass-loader": "^7.1.0",
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
-    "bcrypt": "^3.0.5",
-    "blueimp-file-upload": "^9.28.0",
-    "core-js": "^3.0.1",
+    "bcrypt": "^3.0.6",
+    "blueimp-file-upload": "^9.31.0",
+    "bootstrap-datepicker": "^1.9.0",
+    "core-js": "^2.6.9",
     "jquery-file-upload": "^4.0.11",
     "jquery-ui": "^1.12.1",
     "js-xlsx": "^0.8.22"
