--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.0.1",
+    "url-loader": "^2.0.1",
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
@@ -14,10 +15,12 @@
     "blueimp-file-upload": "^9.31.0",
     "bootstrap-datepicker": "^1.9.0",
     "core-js": "^2.6.9",
+    "font-awesome": "^4.7.0",
     "jquery-autocompleter": "^0.3.0",
     "jquery-file-upload": "^4.0.11",
     "jquery-ui": "^1.12.1",
-    "js-xlsx": "^0.8.22"
+    "js-xlsx": "^0.8.22",
+    "open-iconic": "^1.1.1"
   },
   "providedServices": {
     "autocomplete.provider": {
